--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -7,9 +7,25 @@ body{
 h1{
 	font: normal 90px Trebuchet MS;
 	line-height: 0;
-	padding-top: 90px;
-	padding-bottom: 0px;
+	padding-top: 5%;
+	padding-bottom: 0.7%;
 }
 p{
 	line-height: 0px;
+}
+
+button[name="GitHubLink"]{
+	background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
+    width: 64px;
+    height: 64px;
+}
+
+button[name="GitHubLink"] img{
+	width:100%;
+	height: auto;
 }
