--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,12 @@ li {
   margin: 0 auto;
   padding: 1%;
 }
+.container2 {
+  height: calc(100%-100px);
+  max-width: 80vw;
+  margin: 0 auto;
+  padding: 1%;
+}
 .header-text {
   font-size: larger;
   vertical-align: middle;
