--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,12 +8,12 @@
 .inner{
     max-width: 60vw;
 }
-.page-header {
-    background: #bbe5f3;
-}
-.page-footer {
-    background: #bbe5f3;
-}
-.body {
-    background: #bbe5f3;
-}
+// .page-header {
+//     background: #bbe5f3;
+// }
+// .page-footer {
+//     background: #bbe5f3;
+// }
+// .body {
+//     background: #bbe5f3;
+// }
