--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,23 +19,23 @@
   </head>
   <body>
       <div id="header">
-        <nav>
-          <ul>
+        <h1><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <!-- <nav> -->
+          <!-- <ul>
             <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
             {% if site.show_downloads %}
               <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
               <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
               <li class="title">DOWNLOADS</li>
             {% endif %}
-          </ul>
-        </nav>
+          </ul> -->
+        <!-- </nav> -->
       </div><!-- end header -->
 
     <div class="wrapper">
 
       <section>
         <div id="title">
-          <h1><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
           <!-- <span><a href="/">home</a></span> -->
