--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   </head>
   <body>
       <div id="header">
-        <h1><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 style="margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto;">{{ page.title }}</h1>
         <!-- <nav> -->
           <!-- <ul>
             <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
@@ -36,6 +36,7 @@
 
       <section>
         <div id="title">
+          <h1><a href="/">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
           <!-- <span><a href="/">home</a></span> -->
