--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
   </head>
   <body>
       <div id="header">
-        <h1 style="margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto;">{{ page.title }}</h1>
+        <h1 style="text-align: center;">{{ page.title }}</h1>
         <!-- <nav> -->
           <!-- <ul>
             <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
