--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,11 @@
 .inner{
     max-width: 60vw;
 }
+
+img {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
 // .page-header {
 //     background: #bbe5f3;
 // }
